force-app/main/default/objects/Preempt_Transition_Log__c/fields/Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount__c</fullName>
    <label>Applied Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Dollar amount applied from the booked Actual that superseded the preempt. 0 on Cancellation transitions.</description>
</CustomField>