force-app/main/default/objects/Preempt_Transition_Log__c/fields/Booked_Actual__c.field-meta.xml
<CustomField>
    <fullName>Booked_Actual__c</fullName>
    <label>Booked Actual</label>
    <type>Lookup</type>
    <referenceTo>Actual_Revenue__c</referenceTo>
    <relationshipLabel>Preempt Transitions (Booked)</relationshipLabel>
    <relationshipName>Preempt_Transitions_Booked</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The booked Actual_Revenue__c that superseded the preempt. Null on Cancellation transitions.</description>
</CustomField>