force-app/main/default/objects/Preempt_Transition_Log__c/fields/Net_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Net_Adjustment__c</fullName>
    <label>Net Adjustment</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <formula>NULLVALUE(Applied_Amount__c, 0) - NULLVALUE(Reversed_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <description>Net dollar impact of this transition on projection actuals (Applied - Reversed).</description>
</CustomField>