force-app/main/default/objects/Preempt_Transition_Log__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Optional context written by PreemptTransitionService — e.g., chain depth or reason for cancellation.</description>
</CustomField>