force-app/main/default/objects/Preempt_Transition_Log__c/fields/Original_Preempt__c.field-meta.xml
<CustomField>
    <fullName>Original_Preempt__c</fullName>
    <label>Original Preempt</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Actual_Revenue__c</referenceTo>
    <relationshipLabel>Preempt Transitions (Original)</relationshipLabel>
    <relationshipName>Preempt_Transitions_Original</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The preempt Actual_Revenue__c that was superseded or cancelled.</description>
</CustomField>