force-app/main/default/objects/Preempt_Transition_Log__c/fields/Reversed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Reversed_Amount__c</fullName>
    <label>Reversed Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
    <description>Dollar amount removed from projection rollup when the preempt was superseded or cancelled.</description>
</CustomField>