force-app/main/default/objects/Preempt_Transition_Log__c/fields/Source_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Source_Order_Number__c</fullName>
    <label>Source Order Number</label>
    <type>Text</type>
    <length>100</length>
    <description>Source-system order number that links this transition's preempt and booked actuals.</description>
</CustomField>