force-app/main/default/objects/Preempt_Transition_Log__c/fields/Transition_Type__c.field-meta.xml
<CustomField>
    <fullName>Transition_Type__c</fullName>
    <label>Transition Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Supersede</fullName><default>true</default><label>Supersede</label></value>
            <value><fullName>Cancellation</fullName><default>false</default><label>Cancellation</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>